  to indicate how the version information was obtained. The value "git" is used
  when git history along with git tags were used. The value "file" is used when
  the .version file was read.

* The Tarball.Src template no longer breaks when used from a dist archive.

* The Program and Script modules no longer attempt to transform installed name
  when the Configure module is not imported.

Changes in 0.3.8:

* The release archive now contains the full collection of test files.

Changes in 0.3.7:

* The release archive no longer contains the pre-compiled manual pages. Instead
  the .in files are shipped, to be compiled locally.

Changes in 0.3.6:

* InstallUninstall no longer reuses the relative directory in the source tree
  to represent the target directory. Instead the InstallDir property is the
  only way to influence the final path. This was a late discovery but one that
  is ultimately only sensible. ZMK itself was adjusted to install correctly in
  this new scheme.

Changes in 0.3.5:

* Make distclean no longer breaks building of packages in Debian, by not
  removing the bundled zmk and the configure script that current packaging
  helpers cannot yet re-generate from zmk itself.

Changes in 0.3.4:

 * GitVersion no longer interferes with downstream packaging of releases
   by bundling the .version file for snapshots and tagged releases alike.

Changes in 0.3.3:

 * Tests no longer hang on case-insensitive filesystems.

 * The Directory module no longer issues warnings on MacOS

Changes in 0.3.2:

 * The ManPage module no longer installs files to the /man directory.

Changes in 0.3.1:

 * The GitVersion module now follows public/private variable naming scheme.
   The only public attribute is GitVersion.Active, which expands to yes if
   the module has altered VERSION as compared to what was set in the makefile.

 * The Tarball.Src module no longer attempts to sign releases in CI systems.
   and no longer issues warnings if the GitVersion module is not used.
